# smallml

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PACKAGE_STATUS.md  README.md  README_RESEARCH.md  build_package.sh  config.json  config.json.sample  index.js  livingspaces_config.json  package.json  preprocess_datasets.py  pyproject.toml  requirements.txt  setup.py
data/harmonized/: dataset_metadata.json
data/sme_datasets/: metadata.json
examples/: quickstart.py
notebooks/: 01_feature_mapping.ipynb  02_harmonization_and_encoding.ipynb  03_transfer_learning_training.ipynb  04_shap_prior_extraction.ipynb
scripts/: analyze_shrinkage.py  calibrate_conformal.py  create_architecture_diagram.py  create_deployment_diagram.py  create_figure_5_1.py  create_figure_c_2.py  create_plate_notation.py  create_sme_datasets.py  create_train_test_split.py  create_uncertainty_heatmap.py  evaluate_cross_dataset.py  extract_priors.py  generate_figure_5_1.py  generate_reference_tables.py  generate_table_4_1.py  run_baseline_comparison.py  run_baseline_comparison_cv.py  train_catboost_base.py  train_hierarchical_model.py  validate_coverage.py
smallml/: __init__.py  feature_matcher.py  pipeline.py  version.py
smallml/data/: feature_aliases.json  priors_churn.pkl
smallml/layer2/: __init__.py  hierarchical_model.py
smallml/layer3/: __init__.py  conformal_predictor.py  prediction_sets.py
src/: data_harmonization.py  feature_engineering.py
src/layer1_transfer/: catboost_trainer.py  shap_extractor.py
src/layer2_bayesian/: __init__.py  sme_data_generator.py
src/layer3_conformal/: __init__.py
src/utils/: __init__.py  plotting.py
tests/: __init__.py  test_pipeline.py
